# kibitz

./: .rvmrc  BuildInfo.md  CMakeLists.txt  CallbackFunctions.md  Collaboration.md  CollaborationMessages.md  Discovery.md  Doxyfile  Gemfile  HeartbeatMessages.md  Home.md  Messages.md  NEW_FEATURES  ProjectHome.md  README.wiki  SchedulerWorker.md  TableOfContents.md  TaskTermination.md  Vagrantfile  Worker.md
CMakeModules/: FindPOCO.cmake  FindPoco.cmake  FindZMQ.cmake  Findglog.cmake  Findyamlcpp.cmake
config/: test1.graph
doc/images/: kibitz.vsd
extra/: kibitz.fpc.in
script/: CMakeLists.txt  capture-heartbeat.pl  capture-heartbeat.rb  capture-notification.rb  capture-status-messages.rb  kibitz  notification-listener  repeat-test  run-binding-test  run-example1  run-locator  run-regression-test  run-unit-test  validate  worker-listener-test.rb  worker-send-message-test.rb
src/: CMakeLists.txt  GNUCompilerGuards.h  basic_collaboration_message.cpp  basic_collaboration_message.hpp  bindings.hpp  bus.cpp  bus.hpp  collaboration_message.hpp  common.cpp  common.hpp  constants.hpp  context.cpp  context.hpp  export_config.hpp  heartbeat.cpp  heartbeat.hpp  heartbeat_receiver.cpp  heartbeat_receiver.hpp  heartbeat_sender.cpp  heartbeat_sender.hpp  in_edge.cpp  in_edge.hpp  in_edge_manager.cpp  in_edge_manager.hpp  inproc_notification_message.cpp  inproc_notification_message.hpp  job_initialization_message.cpp  job_initialization_message.hpp  kibitz.cpp  kibitz.hpp  kibitz_util.cpp  kibitz_util.hpp  locator.cpp  locator.hpp  message.cpp  message.hpp  message_base.cpp  message_base.hpp  notification_message.hpp  registry.cpp  (+15 more)
src/apps/: CMakeLists.txt
src/apps/locator/: .gdbinit  CMakeLists.txt  locator.cpp  locator.hpp
src/examples/: CMakeLists.txt  init_worker.cpp  terminus.cpp  test_worker.cpp  worker.cpp
src/examples/example1/: multiplier.yaml  terminus.yaml  worker.yaml
src/kibitz/: CMakeLists.txt  GNUCompilerGuards.hpp  bindings.hpp  bus.cpp  bus.hpp  collaboration_handler.cpp  collaboration_handler.hpp  common.cpp  common.hpp  constants.hpp  context.cpp  context.hpp  export_config.hpp  heartbeat_receiver.cpp  heartbeat_receiver.hpp  heartbeat_sender.cpp  heartbeat_sender.hpp  in_edge.cpp  in_edge.hpp  in_edge_manager.cpp  in_edge_manager.hpp  initialization_handler.cpp  initialization_handler.hpp  kibitz.cpp  kibitz.hpp  kibitz_util.cpp  kibitz_util.hpp  logging.hpp  message_base.cpp  message_base.hpp  out_edge_manager.cpp  out_edge_manager.hpp  publisher.cpp  publisher.hpp  worker_map.cpp  worker_map.hpp  zmq_socket.cpp  zmq_socket.hpp
src/kibitz/locator/: CMakeLists.txt  binding_broadcaster.cpp  binding_broadcaster.hpp  common.cpp  common.hpp  context.cpp  context.hpp  heartbeat_generator.cpp  heartbeat_generator.hpp  notification_message_bus.cpp  notification_message_bus.hpp  registry.cpp  registry.hpp  router.cpp  router.hpp
src/kibitz/messages/: CMakeLists.txt  basic_collaboration_message.cpp  basic_collaboration_message.hpp  binding_notification.cpp  binding_notification.hpp  collaboration_message.hpp  collaboration_message_bundle.cpp  collaboration_message_bundle.hpp  heartbeat.cpp  heartbeat.hpp  inproc_notification_message.cpp  inproc_notification_message.hpp  job_initialization_message.cpp  job_initialization_message.hpp  message.cpp  message.hpp  notification_message.hpp  worker_broadcast_message.cpp  worker_broadcast_message.hpp  worker_info.hpp  worker_notification.cpp  worker_notification.hpp  worker_notification_message.cpp  worker_notification_message.hpp  worker_query.cpp  worker_query.hpp  worker_query_response.cpp  worker_query_response.hpp  worker_status_message.cpp  worker_status_message.hpp
src/kibitz/validator/: CMakeLists.txt  validator.hpp  worker_graph.cpp  worker_graph.hpp
src/tests/: CMakeLists.txt  locator_test.cpp  regression_tester.cpp  unit_test.cpp
